--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: Returns factorial regression from phenotypic and environmental data
              to be estimated. Note: the model is based on ordinary least squares (OLS) and 
              multicollinearity effects are not removed from the analysis.Future updates of the 
              function will allow FR modeling based on Bayesian inference (Gibbs-sampling) and partial least squares (PLS).
-License: Open use
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
